crates/memscribe-testkit/tests/snapshots/events__codex__v2__rejected_alternative.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: events
---
[
  {
    "schema_version": 1,
    "source": "codex",
    "session_id": "01JZ8codexsess0002rejected",
    "seq": 0,
    "event_id": "session_meta:01JZ8codexsess0002rejected",
    "parent_id": null,
    "timestamp": "2026-06-22T15:10:00Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      }
    },
    "kind": {
      "event": "session_start",
      "cwd": "/Users/dev/acme-api",
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      },
      "model": null,
      "tool_version": "0.6.2"
    },
    "provenance": {
      "file": "fixtures/codex/v2/rejected_alternative.jsonl",
      "byte_offset": 0,
      "line_no": 1
    }
  },
  {
    "schema_version": 1,
    "source": "codex",
    "session_id": "01JZ8codexsess0002rejected",
    "seq": 1,
    "event_id": "4cc3a5a14d57aef39b3895570a423315b21225f45615db2678e544457c35c08c",
    "parent_id": null,
    "timestamp": "2026-06-22T15:10:08.22Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "We considered GraphQL for the public API, but let's reject that and stick with REST. GraphQL adds caching and schema-evolution overhead we don't want right now.",
      "parts": [
        {
          "part": "text",
          "text": "We considered GraphQL for the public API, but let's reject that and stick with REST. GraphQL adds caching and schema-evolution overhead we don't want right now."
        }
      ]
    },
    "provenance": {
      "file": "fixtures/codex/v2/rejected_alternative.jsonl",
      "byte_offset": 270,
      "line_no": 2
    }
  },
  {
    "schema_version": 1,
    "source": "codex",
    "session_id": "01JZ8codexsess0002rejected",
    "seq": 2,
    "event_id": "3ce6b4af1624b655cabaf85186396254f498f8f9479214779aa838d954bcd5be",
    "parent_id": null,
    "timestamp": "2026-06-22T15:10:14.5Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "",
      "thinking": "User rejected GraphQL in favor of REST. No code change requested beyond confirming the decision.",
      "model": null,
      "usage": null,
      "parts": []
    },
    "provenance": {
      "file": "fixtures/codex/v2/rejected_alternative.jsonl",
      "byte_offset": 581,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "codex",
    "session_id": "01JZ8codexsess0002rejected",
    "seq": 3,
    "event_id": "9a01123691b704c3e1385c04c8590204e819d5829e09502bc32ac08cbb23dcd3",
    "parent_id": null,
    "timestamp": "2026-06-22T15:10:16.9Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "Understood. We'll keep the REST design and drop the GraphQL exploration.",
      "thinking": null,
      "model": null,
      "usage": null,
      "parts": [
        {
          "part": "text",
          "text": "Understood. We'll keep the REST design and drop the GraphQL exploration."
        }
      ]
    },
    "provenance": {
      "file": "fixtures/codex/v2/rejected_alternative.jsonl",
      "byte_offset": 787,
      "line_no": 4
    }
  },
  {
    "schema_version": 1,
    "source": "codex",
    "session_id": "01JZ8codexsess0002rejected",
    "seq": 4,
    "event_id": "call_grep_001",
    "parent_id": null,
    "timestamp": "2026-06-22T15:10:30.1Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call_grep_001",
      "name": "shell",
      "args": {
        "command": [
          "grep",
          "-r",
          "graphql",
          "src/"
        ]
      }
    },
    "provenance": {
      "file": "fixtures/codex/v2/rejected_alternative.jsonl",
      "byte_offset": 1016,
      "line_no": 5
    }
  },
  {
    "schema_version": 1,
    "source": "codex",
    "session_id": "01JZ8codexsess0002rejected",
    "seq": 5,
    "event_id": "call_grep_001:output",
    "parent_id": "call_grep_001",
    "timestamp": "2026-06-22T15:10:30.45Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call_grep_001",
      "ok": false,
      "output": {
        "output": "",
        "metadata": {
          "exit_code": 1,
          "duration_ms": 18
        }
      }
    },
    "provenance": {
      "file": "fixtures/codex/v2/rejected_alternative.jsonl",
      "byte_offset": 1223,
      "line_no": 6
    }
  },
  {
    "schema_version": 1,
    "source": "codex",
    "session_id": "01JZ8codexsess0002rejected",
    "seq": 6,
    "event_id": "d747cb47466f8632d7838f19a8d0a462ba6e7c5542d40b585a75e4e30a5dc2a5",
    "parent_id": null,
    "timestamp": "2026-06-22T15:10:33.7Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "b2c3d4e5f60718293a4b5c6d7e8f900102030405",
        "branch": "feat/api-shape"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "No GraphQL references exist in the codebase, so nothing to remove.",
      "thinking": null,
      "model": null,
      "usage": null,
      "parts": [
        {
          "part": "text",
          "text": "No GraphQL references exist in the codebase, so nothing to remove."
        }
      ]
    },
    "provenance": {
      "file": "fixtures/codex/v2/rejected_alternative.jsonl",
      "byte_offset": 1422,
      "line_no": 7
    }
  }
]
